# nix-workshop-2024-ros1

./: .gitignore
ros1_ws/src/random_bringup/: CMakeLists.txt  package.xml
ros1_ws/src/random_bringup/launch/: test_pub_sub.launch
ros1_ws/src/random_pub_sub_interfaces/: CMakeLists.txt  package.xml
ros1_ws/src/random_publisher/: CMakeLists.txt  package.xml
ros1_ws/src/random_publisher/src/: random_pub.py
ros1_ws/src/random_subscriber/: CMakeLists.txt  package.xml
ros1_ws/src/random_subscriber/src/: random_sub.py
