<?xml version="1.0"?>
<package format="2">
  <name>random_pub_sub_interfaces</name>
  <version>0.0.0</version>
  <description>The random_pub_sub_interfaces package</description>

  <maintainer email="mat@todo.todo">mat</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
